package grpc

import (
	"context"
	"log"
	"net"

	"chat-service/internal/grpc/chatpb"
	"chat-service/internal/service"

	"google.golang.org/grpc"
)

// ChatServer - gRPC —Å–µ—Ä–≤–µ—Ä
type ChatServer struct {
	chatpb.UnimplementedChatServiceServer
	chatService *service.ChatService
}

// NewChatServer - –∫–æ–Ω—Å—Ç—Ä—É–∫—Ç–æ—Ä
func NewChatServer(chatService *service.ChatService) *ChatServer {
	return &ChatServer{chatService: chatService}
}

// CreateChat - –æ–±—Ä–∞–±–æ—Ç–∫–∞ gRPC-–∑–∞–ø—Ä–æ—Å–∞
func (s *ChatServer) CreateChat(ctx context.Context, req *chatpb.CreateChatRequest) (*chatpb.CreateChatResponse, error) {
	return s.chatService.CreateChat(ctx, req)
}

// –ó–∞–ø—É—Å–∫ gRPC —Å–µ—Ä–≤–µ—Ä–∞
func RunGRPCServer(chatService *service.ChatService) {
	listener, err := net.Listen("tcp", ":50051")
	if err != nil {
		log.Fatalf("‚ùå –û—à–∏–±–∫–∞ –∑–∞–ø—É—Å–∫–∞ gRPC: %v", err)
	}

	grpcServer := grpc.NewServer()
	chatpb.RegisterChatServiceServer(grpcServer, NewChatServer(chatService))

	log.Println("üöÄ Chat Service (gRPC) –∑–∞–ø—É—â–µ–Ω –Ω–∞ –ø–æ—Ä—Ç—É 50051")
	if err := grpcServer.Serve(listener); err != nil {
		log.Fatalf("‚ùå –û—à–∏–±–∫–∞ gRPC-—Å–µ—Ä–≤–µ—Ä–∞: %v", err)
	}
}
